Fix search box alignment

--- a/src/client/styles/components/SubjectHeadings.scss
+++ b/src/client/styles/components/SubjectHeadings.scss
@@ -325,7 +325,7 @@
   float: right;
   font-size: 1rem;
   width: 200px;
-  margin-top: 1%;
+  // margin-top: 1%;
   margin-left: 25px;
 }
 
@@ -447,6 +447,13 @@ span > .verticalEllipse {
   border-top: #ebf0f7;
   width: 90%;
   margin-top: 3px;
+}
+
+.nypl-breadcrumbs {
+  .breadcrumbs-and-search-wrapper {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .nypl-breadcrumbs a {
